# aish

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  lint.yml  test.yml
src/: builtins.rs  command.rs  errors.rs  main.rs  openai_client.rs  parser.rs  pipeline.rs  redirect.rs  scanner.rs  sequence.rs  suggestions.rs  token.rs  tokenize.rs  traits.rs
src/parsing/: lexer.rs  mod.rs  parser.rs  process.rs  scanner.rs
src/traits/: mod.rs  runnable.rs  shell_command.rs
tests/: integration.rs
