[package]
name = "aish"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.9"
log = "0.4.22"
dyn-clone = "1.0.17"
nix = { version = "0.29.0", features = ["process", "fs"] }
rustyline = { version = "14.0.0", features = ["with-file-history"] }
simplelog = "0.12.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tempfile = "3.2"
